# TinyKasKit

./: AW1859.html  AW1859.md  README.md
d1s-dram/: .gitignore  CMakeLists.txt  config.h.in
d1s-dram/include/: byteorder.h  dram.h  io.h  riscv64.h  stddef.h  stdint.h  string.h
d1s-dram/include/sys/: sys-ccu.h  sys-clock.h  sys-dram.h  sys-uart.h
d1s-dram/lib/: CMakeLists.txt  libdram.S
d1s-dram/src/: CMakeLists.txt  main.c  start.S  uart.c
d1s-dram/src/sys/: CMakeLists.txt  sys-clock.c  sys-dram.c  sys-uart.c
d1s-dramc/: CMakeLists.txt  link.ld
d1s-dramc/include/: dram.h  endian.h  io.h  linkage.h  stdarg.h  types.h
d1s-dramc/include/sys/: reg-dram.h  sys-ccu.h  sys-clock.h  sys-dram.h
d1s-dramc/src/: CMakeLists.txt  main.c
d1s-dramc/src/sys/: CMakeLists.txt  libdram.c  sys-dram.c  sys-uart.c
sunxiboot/src/: CMakeLists.txt  bootPack.h  bootpack.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  x.h
t113-dram/: CMakeLists.txt  link.ld
t113-dram/include/: byteorder.h  endian.h  stdarg.h
t113-dram/include/sys/: reg-ccu.h  reg-dram.h  sys-clock.h
t113-dram/lib/: memset.S
t113-dram/src/: main.c  start.S
t113-dram/src/sys/: sys-uart.c
v85x-dram/include/: stddef.h  stdint.h  string.h  types.h
v85x-dram/include/sys/: sys-dram.h  sys-uart.h
v85x-dram/lib/: memcpy.S
v85x-dram/src/: CMakeLists.txt  uart.c
v85x-dram/src/sys/: sys-clock.c  sys-dram.c
